--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 06:05:07 2018</p>
+         Last Run: Mon Nov 12 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>5</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>26</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,23 +46,23 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>17</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
-                        <td>0</td>
-                        <td>-4</td>
-                        <td>6</td>
+                        <td>-1</td>
+                        <td>-5</td>
+                        <td>5</td>
                         <td>72</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>13</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-3",
                  "-4",
-                 "-4"
+                 "-5"
                ]
              },
              {
@@ -103,7 +103,7 @@
                "data":[
                  "1",
                  "0",
-                 "0"
+                 "-1"
                ]
              }
            ]
@@ -162,7 +162,7 @@
                "data":[
                  "5",
                  "5",
-                 "6"
+                 "5"
                ]
              },
              {
@@ -171,8 +171,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "71",
+                 "70",
+                 "70",
                  "72"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "26",
-                 "17",
-                 "13"
+                 "23",
+                 "15",
+                 "11"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 06:05:07 2018</p>
+         Last Run: Mon Nov 12 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -246,14 +246,14 @@
                      <tr>
                         <td>08:00 AM</td>
                         <td>Clear</td>
-                        <td>-9</td>
-                        <td>-13</td>
+                        <td>-8</td>
+                        <td>-12</td>
                         <td>5</td>
-                        <td>84</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>25</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
@@ -261,23 +261,23 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>4</td>
-                        <td>75</td>
+                        <td>77</td>
                         <td>0</td>
-                        <td>10</td>
-                        <td>SSW</td>
-                        <td>26</td>
+                        <td>8</td>
+                        <td>SW</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-4</td>
-                        <td>-8</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>3</td>
-                        <td>67</td>
+                        <td>69</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>SW</td>
-                        <td>26</td>
+                        <td>10</td>
+                        <td>WSW</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -285,11 +285,11 @@
                         <td>-1</td>
                         <td>-5</td>
                         <td>3</td>
-                        <td>60</td>
+                        <td>63</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>27</td>
+                        <td>24</td>
                      </tr>
                   </tbody>
                </table>
@@ -317,9 +317,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-13",
+                 "-12",
                  "-10",
-                 "-8",
+                 "-7",
                  "-5"
                ]
              },
@@ -330,9 +330,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-9",
+                 "-8",
                  "-6",
-                 "-4",
+                 "-3",
                  "-1"
                ]
              }
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "84",
-                 "75",
-                 "67",
-                 "60"
+                 "86",
+                 "77",
+                 "69",
+                 "63"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "25",
-                 "26",
-                 "26",
-                 "27"
+                 "27",
+                 "27",
+                 "24",
+                 "24"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 06:05:07 2018</p>
+         Last Run: Mon Nov 12 07:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -482,10 +482,10 @@
                         <td>Partly Cloudy</td>
                         <td>4</td>
                         <td>1</td>
-                        <td>3</td>
-                        <td>56</td>
+                        <td>2</td>
+                        <td>57</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
                         <td>47</td>
                      </tr>
@@ -494,10 +494,10 @@
                         <td>Partly Cloudy</td>
                         <td>5</td>
                         <td>2</td>
-                        <td>3</td>
-                        <td>55</td>
+                        <td>2</td>
+                        <td>57</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>W</td>
                         <td>51</td>
                      </tr>
@@ -507,10 +507,10 @@
                         <td>5</td>
                         <td>2</td>
                         <td>2</td>
-                        <td>54</td>
+                        <td>56</td>
                         <td>1</td>
-                        <td>13</td>
-                        <td>WNW</td>
+                        <td>14</td>
+                        <td>W</td>
                         <td>54</td>
                      </tr>
                   </tbody>
@@ -609,8 +609,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
+                 "2",
+                 "2",
                  "2"
                ]
              },
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "55",
-                 "54"
+                 "57",
+                 "57",
+                 "56"
                ]
              },
              {
