--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 13:05:05 2018</p>
+         Last Run: Mon Nov 12 14:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Clear</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>4</td>
+                        <td>5</td>
                         <td>74</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>17</td>
+                        <td>10</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>5</td>
-                        <td>73</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>10</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>4</td>
-                        <td>73</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
+                 "5",
                  "5",
                  "4"
                ]
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "74",
-                 "73",
-                 "73"
+                 "74",
+                 "75"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "17",
                  "10",
-                 "6"
+                 "9",
+                 "7"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 13:05:05 2018</p>
+         Last Run: Mon Nov 12 14:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,11 +249,11 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>4</td>
-                        <td>87</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
@@ -261,7 +261,7 @@
                         <td>-7</td>
                         <td>-12</td>
                         <td>3</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SW</td>
@@ -277,7 +277,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>14</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -285,11 +285,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>2</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>16</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
-                 "81",
+                 "88",
+                 "82",
                  "75",
-                 "67"
+                 "68"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
+                 "6",
                  "9",
-                 "14",
-                 "16"
+                 "13",
+                 "17"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 13:05:05 2018</p>
+         Last Run: Mon Nov 12 14:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -479,39 +479,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>4</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>2</td>
-                        <td>57</td>
+                        <td>55</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>W</td>
-                        <td>37</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>4</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>2</td>
-                        <td>57</td>
+                        <td>55</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>18</td>
                         <td>W</td>
-                        <td>46</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>4</td>
-                        <td>1</td>
+                        <td>5</td>
                         <td>2</td>
-                        <td>56</td>
+                        <td>2</td>
+                        <td>54</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>W</td>
-                        <td>52</td>
+                        <td>41</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "1",
-                 "1",
-                 "1"
+                 "0",
+                 "0",
+                 "2"
                ]
              },
              {
@@ -552,7 +552,7 @@
                "data":[
                  "4",
                  "4",
-                 "4"
+                 "5"
                ]
              }
            ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "57",
-                 "56"
+                 "55",
+                 "55",
+                 "54"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "37",
-                 "46",
-                 "52"
+                 "27",
+                 "36",
+                 "41"
                ]
              }
            ]
