--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 23:05:05 2018</p>
+         Last Run: Tue Nov 13 00:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>1</td>
                         <td>-3</td>
                         <td>3</td>
-                        <td>71</td>
+                        <td>74</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>73</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>-1</td>
                         <td>-5</td>
                         <td>4</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>6</td>
+                        <td>5</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
-                 "73",
-                 "75"
+                 "74",
+                 "76",
+                 "76"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
-                 "5",
-                 "6"
+                 "6",
+                 "4",
+                 "5"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 23:05:05 2018</p>
+         Last Run: Tue Nov 13 00:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,35 +249,35 @@
                         <td>-10</td>
                         <td>-14</td>
                         <td>4</td>
-                        <td>85</td>
+                        <td>83</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>SW</td>
-                        <td>4</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
                         <td>-8</td>
                         <td>-12</td>
-                        <td>3</td>
-                        <td>79</td>
+                        <td>4</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>6</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-5</td>
-                        <td>-9</td>
-                        <td>2</td>
-                        <td>73</td>
+                        <td>-6</td>
+                        <td>-10</td>
+                        <td>3</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>11</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -285,11 +285,11 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>2</td>
-                        <td>65</td>
+                        <td>61</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>14</td>
+                        <td>15</td>
                      </tr>
                   </tbody>
                </table>
@@ -319,7 +319,7 @@
                "data":[
                  "-14",
                  "-12",
-                 "-9",
+                 "-10",
                  "-7"
                ]
              },
@@ -332,7 +332,7 @@
                "data":[
                  "-10",
                  "-8",
-                 "-5",
+                 "-6",
                  "-3"
                ]
              }
@@ -392,8 +392,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "4",
+                 "4",
                  "3",
-                 "2",
                  "2"
                ]
              },
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "85",
-                 "79",
-                 "73",
-                 "65"
+                 "83",
+                 "78",
+                 "70",
+                 "61"
                ]
              },
              {
@@ -415,10 +415,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
-                 "6",
-                 "11",
-                 "14"
+                 "5",
+                 "7",
+                 "12",
+                 "15"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Nov 12 23:05:05 2018</p>
+         Last Run: Tue Nov 13 00:05:05 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -480,12 +480,12 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>4</td>
-                        <td>0</td>
+                        <td>3</td>
+                        <td>-1</td>
                         <td>1</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>W</td>
                         <td>43</td>
                      </tr>
@@ -495,22 +495,22 @@
                         <td>4</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>51</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>45</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>5</td>
+                        <td>4</td>
+                        <td>1</td>
                         <td>2</td>
-                        <td>2</td>
-                        <td>51</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>47</td>
                      </tr>
                   </tbody>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-1",
                  "0",
-                 "0",
-                 "2"
+                 "1"
                ]
              },
              {
@@ -550,9 +550,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "3",
                  "4",
-                 "4",
-                 "5"
+                 "4"
                ]
              }
            ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
                  "51",
-                 "51"
+                 "50",
+                 "49"
                ]
              },
              {
